# gptc

./: .gitignore  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  LICENSE  README.md  x86_64-linux.Dockerfile  x86_64-windows.Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  publish.yml
gptc-windows-latest/: gptc.d
scripts/: install.sh  update.sh
src/: args.rs  config.rs  gpt_client.rs  lib.rs  logger.rs  main.rs
