[package]
name = "gptc"
version = "0.1.0"
edition = "2021"
authors = ["Oscar Rodríguez <osdavrm@gmail.com>"]
description = "A GPT CLI implementation to access OpenAI's models."

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json", "blocking", "rustls-tls"] }
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
clipboard = "0.5.0"
colored = "2.0.0"
